--- a/SublimPick/frontend/sublimerpick-frontend/src/app.html
+++ b/SublimPick/frontend/sublimerpick-frontend/src/app.html
@@ -3,7 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<!-- <link rel="stylesheet" href="/src/styles/global.css" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Sublimpick</title>
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval'; object-src 'none';">
+		<!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'nonce-WNulRpdRGF0S9ajFkAtFIQ=='; object-src 'none';"> -->
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
